Update header to be properly responsive, Fix issue where rule with long json name bugs out sending it for review, Add check to make sure inputed file path/name somewhat valid and is json when creating a new rule, Show "bulk scenarios" for inReview and Published (but not embedded), Fix issue with linked rules not showing up properly anymore, Fix issues with being able to change linked rule when not in edit mode

--- a/app/components/RuleHeader/RuleHeader.module.css
+++ b/app/components/RuleHeader/RuleHeader.module.css
@@ -19,6 +19,8 @@
 
 .titleHeader {
   margin: 0;
+  word-wrap: break-word;
+  max-width: calc(100vw - 32px);
 }
 
 .titleInput {
@@ -39,4 +41,24 @@
   padding: 0;
   font-size: 18px;
   color: #4b4b4b;
+}
+
+
+
+@media (max-width: 767px) {
+  .headerWrapper {
+    flex-direction: column;
+    gap: 16px;
+  }
+  .headerContent {
+    flex-direction: column;
+    align-items: flex-start !important;
+    gap: 8px !important;
+  }
+  .titleHeader {
+    font-size: 24px;
+  }
+  .titleFilePath {
+    font-size: 14px;
+  }
 }
